[package]
name = "quickcheck"
version = "1.0.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Automatic property based testing with shrinking."
documentation = "https://docs.rs/quickcheck"
homepage = "https://github.com/BurntSushi/quickcheck"
repository = "https://github.com/BurntSushi/quickcheck"
readme = "README.md"
keywords = ["testing", "quickcheck", "property", "shrinking", "fuzz"]
categories = ["development-tools::testing"]
license = "Unlicense OR MIT"
exclude = ["/Makefile", "/ctags.rust", "/session.vim"]
edition = "2021"

[workspace]
members = ["quickcheck_macros"]

[features]
default = ["regex", "use_logging"]
use_logging = ["log", "env_logger"]
regex = ["env_logger/regex"]
etna = ["serde", "erased-serde", "serde-lexpr", "serde_json"]

[lib]
name = "quickcheck"

[dependencies]
env_logger = { version = "0.11", default-features = false, optional = true }
log = { version = "0.4", optional = true }
rand = { version = "0.9", default-features = false, features = ["os_rng", "small_rng"] }

# etna requirements
serde = { version = "1.0.219", features = ["derive"], optional = true }
erased-serde = {version = "0.4.6", optional = true }
serde_json = {version = "1.0.140", optional = true }
serde-lexpr = { version = "0.1.0", optional = true }
